# flutter_rust

./: .gitignore  README.md  pubspec.yaml
.fvm/: flutter_sdk
android/app/: build.gradle
ios/Runner/: Info.plist
lib/: main.dart  rust_http_generated.dart
rust/: Cargo.toml
rust/src/: bridge_generated.io.rs  bridge_generated.rs  lib.rs  rust_http.rs
