[package]
name = "rust_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.19.0", default-features = false }
tokio = { version = "1", features = ["full"] }
reqwest-middleware = "0.1.6"
reqwest = "0.11.12"
reqwest-retry = "0.1.5"
reqwest-tracing = "0.2.3"
anyhow = "1.0"
openssl-sys = "0.9"
openssl = {version = "0.10.35", features = ["vendored"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flutter_rust_bridge = "1.61.0"
[profile.release]
lto = true
[lib]
# 编译的动态库名字
name = "rust_http"
# 编译类型 cdylib 指定为动态库 staticlib指定为静态库
crate-type = ["cdylib","staticlib"]
